Add online booking form with validation and navigation toggle functionality

--- a/annual-check-up.html
+++ b/annual-check-up.html
@@ -4,23 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>100SMILES Dental Care — Template</title>
+    <title>100SMILES Dental Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="home">
-<header class="site-header" role="banner">
-  <h1>
-    <a href="index.html">100SMILES Dental Care</a>
-  </h1>
-</header>
+    <header class="site-header" role="banner">
+        <h1>
+            <a href="index.html">100SMILES Dental Care</a>
+        </h1>
+    </header>
 
     <nav class="site-nav" aria-label="Primary">
         <div class="nav-inner">
             <a href="services.html">Services</a>
+            <a href="free-dental-checkup.html">Free Dental Check-up</a>
             <a href="annual-check-up.html">Annual Dental Check Up</a>
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
+            <a href="online-booking.html">Online Booking</a>
+
         </div>
     </nav>
 
@@ -30,10 +36,12 @@
             <div class="hero">
                 <article>
                     <h2 id="ac-title">Annual Dental Check-Up</h2>
-                    <p>Keep your family’s smiles healthy with a friendly yearly visit. A quick appointment helps us
-                        find small issues early and keep teeth clean and strong.</p>
+                    <p>Keep your family’s smiles in good shape with a friendly yearly visit. A short appointment gives
+                        us the
+                        chance to catch issues early, keep teeth clean and support your overall wellbeing.</p>
                     <p><strong>First visit special:</strong> Book via email and receive <strong>20% off</strong> your
-                        first visit.</p>
+                        first visit.
+                        Look out as well for seasonal offers on our Annual Dental Check-Up package.</p>
                     <a href="articles.html#annual-check-up-article" class="btn">Read more</a>
                     <a href="mailto:admin@100smilesdentalcare.com.au?subject=Annual%20Check-Up%20Booking"
                         class="btn">Book Your Check-Up</a>
@@ -54,42 +62,59 @@
                         <span class="num">45 min</span>
                         <span class="label">Average Check-Up Duration</span>
                     </div>
-                   <div class="stat">
-                        <span class="num">20% OFF</span>
-                        <span class="label">First Visit (Email Booking)</span>
+                    <div class="stat">
+                        <span class="num">10% OFF</span>
+                        <span class="label">Annual Check-Up (Offer Period)</span>
                     </div>
                 </div>
             </section>
 
             <!-- What’s Included -->
             <div class="band">
-                <h3>What’s Included in Your Annual Dental Check-Up</h3>
+                <h3>What’s Included in Your Annual Dental Check-Up*</h3>
+                <p style="margin-top:.35rem;">Our Annual Dental Check-Up package is designed as a complete review of
+                    your oral
+                    health, with a focus on prevention and early detection.</p>
                 <div class="grid grid--3" style="margin-top:1rem">
                     <article class="card">
-                        <h4>Physical Exam</h4>
-                        <p>Brief head, neck, gum and tooth assessment to spot early signs of problems.</p>
+                        <h4>Physical Examination</h4>
+                        <p>A thorough check of your mouth, jaw and surrounding areas to look for signs of illness,
+                            changes or
+                            discomfort that may need attention.</p>
                     </article>
                     <article class="card">
                         <h4>Professional Clean</h4>
-                        <p>Gentle scale and polish to remove plaque and help prevent decay and gum disease.</p>
+                        <p>Careful removal of plaque and tartar, leaving teeth feeling smoother and helping to protect
+                            against decay
+                            and gum disease.</p>
                     </article>
                     <article class="card">
-                        <h4>X-Rays </h4>
-                        <p>Targeted images only when helpful for diagnosis and treatment planning.</p>
+                        <h4>X-Rays (If Indicated)</h4>
+                        <p>Targeted X-rays when helpful to assess teeth and bone, identify hidden problems and support
+                            preventive
+                            care planning.</p>
                     </article>
                     <article class="card">
-                        <h4>Dental Check</h4>
-                        <p>Thorough cavity and gum check, plus a bite and wear review.</p>
+                        <h4>Dental Check-Up</h4>
+                        <p>Detailed review of your teeth and gums, with advice on managing or reducing any signs of
+                            dental disease.</p>
                     </article>
                     <article class="card">
                         <h4>Nutritional Guidance</h4>
-                        <p>Simple, practical tips tailored to your family’s everyday routines.</p>
+                        <p>Conversation about your diet and daily habits, with simple suggestions that support a
+                            stronger, healthier
+                            smile.</p>
                     </article>
                     <article class="card">
-                        <h4>Next-Step Plan</h4>
-                        <p>Clear advice if follow-up or optional tests are recommended.</p>
+                        <h4>Additional Tests (If Needed)</h4>
+                        <p>Where appropriate for your age, history or specific concerns, we may recommend extra tests or
+                            lab work to
+                            support a clear diagnosis.</p>
                     </article>
                 </div>
+                <p style="margin-top:0.75rem;font-size:.9rem;">*Your dentist will tailor the visit to your needs. Not
+                    all
+                    services are required for every patient.</p>
             </div>
 
             <!-- Why It Matters -->
@@ -97,41 +122,42 @@
                 <article class="card">
                     <h4>Why Every Year?</h4>
                     <ul>
-                        <li>Catch issues early—treatments are simpler and more affordable.</li>
-                        <li>Preventive care keeps smiles bright and confident.</li>
-                        <li>Great for kids, teens, adults and retirees in the Razole community.</li>
+                        <li>Identify potential problems early, when treatment is usually simpler and more affordable.
+                        </li>
+                        <li>Support long-term oral and general health through regular preventive care.</li>
+                        <li>Suitable for children, teens, adults and retirees in the Razole community.</li>
                     </ul>
                 </article>
                 <article class="card">
                     <h4>How to Prepare</h4>
                     <ul>
-                        <li>Arrive a few minutes early for forms if it’s your first visit.</li>
-                        <li>Bring a current medication list and any questions.</li>
-                        <li>Brush and floss as normal—no special prep needed.</li>
+                        <li>Arrive a little early if it’s your first visit, so we can complete any forms together.</li>
+                        <li>Bring a list of medications and any questions or concerns you’d like to discuss.</li>
+                        <li>Brush and floss as normal—no special preparation is needed.</li>
                     </ul>
                 </article>
                 <article class="card">
                     <h4>Ready to Book?</h4>
-                    <p>We’re at <strong>33 Fantail Street, Razole</strong>. Have a question before booking?
-                        Email us any time and we’ll help you choose the right time and clinician.</p>
+                    <p>We’re at <strong>33 Fantail Street, Razole</strong>. Prefer to talk before booking? Email us with
+                        your
+                        questions and we’ll help you choose the best time and clinician.</p>
                     <p class="center"><a class="btn"
                             href="mailto:admin@100smilesdentalcare.com.au?subject=Annual%20Check-Up%20Booking">Email to
-                            Book (20% Off First Visit)</a></p>
+                            Book (Offers Available During Promotion)</a></p>
                 </article>
             </div>
         </section>
     </main>
 
-
     <footer class="site-footer" role="contentinfo">
         <div class="footer-inner">
             <div>
-  <h2>Contact</h2>
-  <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
-  <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
-  <address>Address: 33 Fantail Street, Razole, Queensland.</address>
-  <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
-</div>
+                <h2>Contact</h2>
+                <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
+                <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
+                <address>Address: 33 Fantail Street, Razole, Queensland.</address>
+                <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
+            </div>
 
             <div>
                 <h2>Trading Hours</h2>
