--- a/articles.html
+++ b/articles.html
@@ -4,165 +4,196 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>100SMILES Dental Care — Template</title>
+    <title>100SMILES Dental Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="home">
-<header class="site-header" role="banner">
-  <h1>
-    <a href="index.html">100SMILES Dental Care</a>
-  </h1>
-</header>
+    <header class="site-header" role="banner">
+        <h1>
+            <a href="index.html">100SMILES Dental Care</a>
+        </h1>
+    </header>
 
-<nav class="site-nav" aria-label="Primary">
-  <div class="nav-inner">
-      <a href="services.html">Services</a>
-      <a href="annual-check-up.html">Annual Dental Check Up</a>
-      <a href="our-team.html">Our Team</a>
-      <a href="articles.html">Articles</a>
-  </div>
-</nav>
+    <nav class="site-nav" aria-label="Primary">
+        <div class="nav-inner">
+            <a href="services.html">Services</a>
+            <a href="free-dental-checkup.html">Free Dental Check-up</a>
+            <a href="annual-check-up.html">Annual Dental Check Up</a>
+            <a href="our-team.html">Our Team</a>
+            <a href="articles.html">Articles</a>
+            <a href="online-booking.html">Online Booking</a>
 
-<main>
-  <section class="intro" aria-labelledby="articles-title">
-      <h2 id="articles-title">Articles</h2>
-      <p>Friendly, plain-English advice from the 100SMILES team—focused on prevention and everyday tips that work for every age.</p>
-  </section>
+        </div>
+    </nav>
 
-  <article id="annual-check-up-article" class="feature-article" aria-labelledby="feature-title">
-      <div class="feature-body">
-          <div class="band">
-              <h3 id="feature-title">The Importance of Annual Dental Check-ups: Investing in Lifelong Dental Health</h3>
-              <p class="feature-meta"><strong>Author: </strong>100SMILES Team <br> <strong>Updated: </strong>2025-11-08</p>
+    <main>
+        <section class="intro" aria-labelledby="articles-title">
+            <h2 id="articles-title">Articles</h2>
+            <p>Friendly, plain-English advice from the 100SMILES team—focused on prevention and everyday tips that work
+                for every age.</p>
+        </section>
 
-              <p>Our smiles add confidence, comfort and joy to daily life. Looking after them means choosing
-                 preventive care—and the most important step in that routine is a yearly dental check-up.
-                 This simple appointment is the foundation for keeping your mouth healthy over the long term.</p>
-              <br>
+        <article id="annual-check-up-article" class="feature-article" aria-labelledby="feature-title">
+            <div class="feature-body">
+                <div class="band">
+                    <h3 id="feature-title">The Importance of Annual Dental Check-ups: Investing in Lifelong Dental
+                        Health</h3>
+                    <p class="feature-meta"><strong>Author: </strong>100SMILES Team <br> <strong>Updated:
+                        </strong>2025-11-08</p>
 
-              <div class="grid grid--3">
-                  <article class="card">
-                      <h4>1. Early Detection of Health Issues</h4>
-                      <p>Annual check-ups give your dentist the chance to spot problems before they become serious.
-                         Just like regular GP visits, routine dental reviews catch small concerns early, leading to
-                         simpler treatment and better outcomes.</p>
-                  </article>
+                    <p>Our smiles add confidence, comfort and joy to daily life. Looking after them means choosing
+                        preventive care—and the most important step in that routine is a yearly dental check-up.
+                        This simple appointment is the foundation for keeping your mouth healthy over the long term.</p>
+                    <br>
 
-                  <article class="card">
-                      <h4>2. Preventive Care</h4>
-                      <p>Professional cleans and routine exams are the backbone of an Annual Dental Check-up.
-                         These preventive steps lower the risk of serious—sometimes dangerous—oral diseases.
-                         Tools like X-rays and clinical checks also support your overall wellbeing.</p>
-                  </article>
+                    <div class="grid grid--3">
+                        <article class="card">
+                            <h4>1. Early Detection of Health Issues</h4>
+                            <p>Annual check-ups give your dentist the chance to spot problems before they become
+                                serious.
+                                Just like regular GP visits, routine dental reviews catch small concerns early, leading
+                                to
+                                simpler treatment and better outcomes.</p>
+                        </article>
 
-                  <article class="card">
-                      <h4>3. Tailored Nutritional Guidance</h4>
-                      <p>Needs change across life stages. Your dentist can review your diet and provide practical,
-                         personalised suggestions that support strong teeth and gums.</p>
-                  </article>
+                        <article class="card">
+                            <h4>2. Preventive Care</h4>
+                            <p>Professional cleans and routine exams are the backbone of an Annual Dental Check-up.
+                                These preventive steps lower the risk of serious—sometimes dangerous—oral diseases.
+                                Tools like X-rays and clinical checks also support your overall wellbeing.</p>
+                        </article>
 
-                  <article class="card">
-                      <h4>4. Dental Health Evaluation</h4>
-                      <p>Oral health affects whole-body health. During the visit, your dentist examines teeth and gums,
-                         addressing early signs of disease. Good daily care, backed by regular checks, helps you stay
-                         healthy for longer.</p>
-                  </article>
+                        <article class="card">
+                            <h4>3. Tailored Nutritional Guidance</h4>
+                            <p>Needs change across life stages. Your dentist can review your diet and provide practical,
+                                personalised suggestions that support strong teeth and gums.</p>
+                        </article>
 
-                  <article class="card">
-                      <h4>5. Holistic Well-being</h4>
-                      <p>Beyond single issues, the check-up looks at the bigger picture: your home care routine,
-                         environment and habits. Expert guidance here supports comfort, confidence and quality of life.</p>
-                  </article>
+                        <article class="card">
+                            <h4>4. Dental Health Evaluation</h4>
+                            <p>Oral health affects whole-body health. During the visit, your dentist examines teeth and
+                                gums,
+                                addressing early signs of disease. Good daily care, backed by regular checks, helps you
+                                stay
+                                healthy for longer.</p>
+                        </article>
 
-                  <article class="card">
-                      <h4>6. Addressing Behavioural Changes</h4>
-                      <p>Changes in habits can hint at underlying concerns. A yearly appointment is a safe space to
-                         raise anything new so your dentist can respond early with advice or treatment.</p>
-                  </article>
-              </div>
+                        <article class="card">
+                            <h4>5. Holistic Well-being</h4>
+                            <p>Beyond single issues, the check-up looks at the bigger picture: your home care routine,
+                                environment and habits. Expert guidance here supports comfort, confidence and quality of
+                                life.</p>
+                        </article>
 
-              <br>
-              <p>In short, booking an Annual Dental Check-up is a smart investment in long-term health and happiness.
-                 It prevents problems, strengthens your partnership with your dentist and keeps your smile at its best.
-                 Schedule your next visit today and enjoy the confidence that comes with proactive care.</p>
-          </div>
-      </div>
-  </article>
+                        <article class="card">
+                            <h4>6. Addressing Behavioural Changes</h4>
+                            <p>Changes in habits can hint at underlying concerns. A yearly appointment is a safe space
+                                to
+                                raise anything new so your dentist can respond early with advice or treatment.</p>
+                        </article>
+                    </div>
 
-  <h3>More helpful articles</h3>
-  <section class="articles" aria-label="Article list">
-      <!-- Regular Check-Ups -->
-      <article class="article-card">
-          <div class="thumb">
-              <img src="images/articles-empty-dental-chair.jpg" alt="Empty dental chair in a bright clinic">
-          </div>
-          <div class="content">
-              <h3>Why Regular Check-Ups Matter</h3>
-              <p class="meta"><strong>Author: </strong>Queensland Government <br> <strong>Updated: </strong>16 March 2022</p>
-              <p>Problems are easiest to treat when found early. See what happens during a routine visit and how a yearly
-                 check keeps teeth strong and gums healthy.</p>
-              <a class="btn" href="https://www.qld.gov.au/health/staying-healthy/oral-health/visiting-the-dentist/regular-dental-check-ups">Read Article</a>
-          </div>
-      </article>
+                    <br>
+                    <p>In short, booking an Annual Dental Check-up is a smart investment in long-term health and
+                        happiness.
+                        It prevents problems, strengthens your partnership with your dentist and keeps your smile at its
+                        best.
+                        Schedule your next visit today and enjoy the confidence that comes with proactive care.</p>
+                </div>
+            </div>
+        </article>
 
-      <!-- Oral Hygiene Tips -->
-      <article class="article-card">
-          <div class="thumb">
-              <img src="images/articles-tools-blue.jpg" alt="Dental tools on a blue background">
-          </div>
-          <div class="content">
-              <h3>Everyday Oral Hygiene Tips</h3>
-              <p class="meta"><strong>Author: </strong>Cleveland Clinic medical professional <br> <strong>Updated: </strong>21 April 2022</p>
-              <p>Small habits, big results. Practical guidance on brushing, flossing and mouthwash—plus how to build a routine you’ll actually keep.</p>
-              <a class="btn" href="https://my.clevelandclinic.org/health/treatments/16914-oral-hygiene">Read Article</a>
-          </div>
-      </article>
+        <h3>More helpful articles</h3>
+        <section class="articles" aria-label="Article list">
+            <!-- Regular Check-Ups -->
+            <article class="article-card">
+                <div class="thumb">
+                    <img src="images/articles-empty-dental-chair.jpg" alt="Empty dental chair in a bright clinic">
+                </div>
+                <div class="content">
+                    <h3>Why Regular Check-Ups Matter</h3>
+                    <p class="meta"><strong>Author: </strong>Queensland Government <br> <strong>Updated: </strong>16
+                        March 2022</p>
+                    <p>Problems are easiest to treat when found early. See what happens during a routine visit and how a
+                        yearly
+                        check keeps teeth strong and gums healthy.</p>
+                    <a class="btn"
+                        href="https://www.qld.gov.au/health/staying-healthy/oral-health/visiting-the-dentist/regular-dental-check-ups">Read
+                        Article</a>
+                </div>
+            </article>
 
-      <!-- Understanding Dental Implants -->
-      <article class="article-card">
-          <div class="thumb">
-              <img src="images/articles-understanding-dental-implants.jpg" alt="Editorial layout with dental implant imagery">
-          </div>
-          <div class="content">
-              <h3>Understanding Dental Implants</h3>
-              <p class="meta"><strong>Author: </strong>Health Direct<br> <strong>Updated: </strong>10 February 2025</p>
-              <p>Thinking about replacing a missing tooth? This guide covers when implants help, the treatment steps and answers to common questions.</p>
-              <a class="btn" href="https://www.healthdirect.gov.au/dental-implant">Read Article</a>
-          </div>
-      </article>
+            <!-- Oral Hygiene Tips -->
+            <article class="article-card">
+                <div class="thumb">
+                    <img src="images/articles-tools-blue.jpg" alt="Dental tools on a blue background">
+                </div>
+                <div class="content">
+                    <h3>Everyday Oral Hygiene Tips</h3>
+                    <p class="meta"><strong>Author: </strong>Cleveland Clinic medical professional <br> <strong>Updated:
+                        </strong>21 April 2022</p>
+                    <p>Small habits, big results. Practical guidance on brushing, flossing and mouthwash—plus how to
+                        build a routine you’ll actually keep.</p>
+                    <a class="btn" href="https://my.clevelandclinic.org/health/treatments/16914-oral-hygiene">Read
+                        Article</a>
+                </div>
+            </article>
 
-      <!-- Choosing the Right Toothbrush -->
-      <article class="article-card">
-          <div class="thumb">
-              <img src="images/articles-toothbrush-circle.jpg" alt="Toothbrushes in a circle">
-          </div>
-          <div class="content">
-              <h3>Choosing the Right Toothbrush</h3>
-              <p class="meta"><strong>Author: </strong>Colgate <br> <strong>Updated: </strong>05 May 2023</p>
-              <p>Manual or electric? Soft or medium bristles? We compare options so you can choose a brush that’s gentle on gums and great at removing plaque.</p>
-              <a class="btn" href="https://www.colgate.com.au/oral-health/selecting-dental-products/choosing-the-right-toothbrush">Read Article</a>
-          </div>
-      </article>
-  </section>
-</main>
+            <!-- Understanding Dental Implants -->
+            <article class="article-card">
+                <div class="thumb">
+                    <img src="images/articles-understanding-dental-implants.jpg"
+                        alt="Editorial layout with dental implant imagery">
+                </div>
+                <div class="content">
+                    <h3>Understanding Dental Implants</h3>
+                    <p class="meta"><strong>Author: </strong>Health Direct<br> <strong>Updated: </strong>10 February
+                        2025</p>
+                    <p>Thinking about replacing a missing tooth? This guide covers when implants help, the treatment
+                        steps and answers to common questions.</p>
+                    <a class="btn" href="https://www.healthdirect.gov.au/dental-implant">Read Article</a>
+                </div>
+            </article>
 
-<footer class="site-footer" role="contentinfo">
-  <div class="footer-inner">
-      <div>
-        <h2>Contact</h2>
-        <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
-        <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
-        <address>Address: 33 Fantail Street, Razole, Queensland.</address>
-        <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
-      </div>
+            <!-- Choosing the Right Toothbrush -->
+            <article class="article-card">
+                <div class="thumb">
+                    <img src="images/articles-toothbrush-circle.jpg" alt="Toothbrushes in a circle">
+                </div>
+                <div class="content">
+                    <h3>Choosing the Right Toothbrush</h3>
+                    <p class="meta"><strong>Author: </strong>Colgate <br> <strong>Updated: </strong>05 May 2023</p>
+                    <p>Manual or electric? Soft or medium bristles? We compare options so you can choose a brush that’s
+                        gentle on gums and great at removing plaque.</p>
+                    <a class="btn"
+                        href="https://www.colgate.com.au/oral-health/selecting-dental-products/choosing-the-right-toothbrush">Read
+                        Article</a>
+                </div>
+            </article>
+        </section>
+    </main>
 
-      <div>
-          <h2>Trading Hours</h2>
-          <p>Monday – Friday: 8:30am - 6:30 PM</p>
-          <p>Saturday – Sunday: 8:30am - 1pm</p>
-      </div>
-  </div>
-</footer>
+    <footer class="site-footer" role="contentinfo">
+        <div class="footer-inner">
+            <div>
+                <h2>Contact</h2>
+                <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
+                <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
+                <address>Address: 33 Fantail Street, Razole, Queensland.</address>
+                <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
+            </div>
+
+            <div>
+                <h2>Trading Hours</h2>
+                <p>Monday – Friday: 8:30am - 6:30 PM</p>
+                <p>Saturday – Sunday: 8:30am - 1pm</p>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
