--- a/index.html
+++ b/index.html
@@ -4,44 +4,67 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>100SMILES Dental Care — Template</title>
+    <title>100SMILES Dental Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="home">
-<header class="site-header" role="banner">
-  <h1>
-    <a href="index.html">100SMILES Dental Care</a>
-  </h1>
-</header>
+    <header class="site-header" role="banner">
+        <h1>
+            <a href="index.html">100SMILES Dental Care</a>
+        </h1>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+    </header>
 
     <nav class="site-nav" aria-label="Primary">
+
+
         <div class="nav-inner">
             <a href="services.html">Services</a>
-
+            <a href="free-dental-checkup.html">Free Dental Check-up</a>
             <a href="annual-check-up.html">Annual Dental Check Up</a>
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
+            <a href="online-booking.html">Online Booking</a>
         </div>
     </nav>
-    <main class="home-main">
 
+
+    <main class="home-main">
         <section class="home-grid">
             <div class="home-left">
                 <article class="intro">
                     <h2>Welcome to 100SMILES Dental Care</h2>
-                    <p>We’re a friendly local clinic in Razole providing preventive, restorative and orthodontic care
-                        for families of all ages. Our approach is simple: clear explanations, gentle treatment and
-                        practical guidance you can use every day.</p>
+                    <p>For more than three decades, 100SMILES Dental Care has been part of the Razole community at
+                        <strong>33 Fantail Street</strong>. With over fifty years of combined experience, our team
+                        offers
+                        friendly, reliable and compassionate dental care for every age.
+                    </p>
+
+                    <p>We look after everyday dental needs and more complex care in one place—from routine check-ups and
+                        professional cleans to implants, orthodontics, cosmetic dentistry and emergency support. Our
+                        clinicians
+                        focus on clear explanations, gentle treatment and practical tips you can use at home.</p>
+
+                    <p>To make life easier, we’ve introduced an <strong>online booking option</strong> alongside phone
+                        and
+                        email appointments, and we’ve welcomed a dedicated <strong>pediatric dentist</strong> so
+                        families can access
+                        care for children and adults under one roof.</p>
+
                     <p>Whether you’re due for your <a href="annual-check-up.html" style="color:var(--brand);">Annual
                             Dental
-                            Check-Up</a>, need advice about implants, or want tips for better at-home care, we’re here
-                        to help.</p>
-                    <p>Find us at <strong>33 Fantail Street, Razole</strong>. We’re open seven days and offer a
-                        <strong>20% discount on your first visit when you book via email</strong>.
-                    </p>
+                            Check-Up</a>, considering implants or simply want better day-to-day oral care routines,
+                        we’re here
+                        to help keep your smile healthy and confident.</p>
+
                     <br>
-                    <a class="btn btn--block" class="btn btn--block" href="services.html">Explore our Services</a>
+                    <a class="btn btn--block" href="services.html">Explore our Services</a>
                 </article>
 
                 <section class="stats-band" aria-label="Clinic facts">
@@ -51,8 +74,8 @@
                             <span class="label">Open Weekly<br>Mon–Fri 8:30am–6:30pm <br> Sat–Sun 8:30am–1pm</span>
                         </div>
                         <div class="stat">
-                            <span class="num">33 FANTAIL ST. </span>
-                            <span class="label">Razole, Queensland <br> Friendly reception & easy parking</span>
+                            <span class="num">33 FANTAIL ST.</span>
+                            <span class="label">Razole, Queensland <br> Modern clinic & easy access</span>
                         </div>
                     </div>
                 </section>
@@ -62,38 +85,48 @@
                 <h3>Announcements</h3>
 
                 <div class="announcement-note">
-                    <strong>First Visit Offer: 20% Off!</strong><br><br>
-                    Enjoy <strong>20% discount</strong> on your first dental visit when you book through email!<br><br>
-                    <a class="btn btn--block" href="mailto:admin@100smilesdentalcare.com.au?subject=First%20Visit%20Booking">
-                        Email to Book
+                    <strong>25% Off When You Book Online</strong><br><br>
+                    Enjoy a <strong>25% discount</strong> on your next dental visit when you use our online booking form
+                    to
+                    make an appointment.<br><br>
+                    <a class="btn btn--block" href="online-booking.html">
+                        Book Appointment Online
                     </a>
                 </div>
 
                 <div class="announcement-note">
-                    <strong>Limited Time: 10% Off Annual Check-Up</strong><br><br>
-                    Until <strong>March 31st</strong>, enjoy a <strong>10% discount</strong> on your Annual Dental
+                    <strong>Free Dental Check-Up Day</strong><br><br>
+                    Join us for a <strong>free dental check-up</strong> on <strong>Saturday 5th July from
+                        9:00am*</strong>.
+                    A great chance to have your smile reviewed at no cost.<br><br>
+                    <a class="btn btn--block" href="free-dental-checkup.html">
+                        See Details
+                    </a>
+                </div>
+
+                <div class="announcement-note">
+                    <strong>10% Off Annual Dental Check-Up</strong><br><br>
+                    Until <strong>April 30</strong>, enjoy a <strong>10% discount</strong> on your Annual Dental
                     Check-Up at
                     100SMILES Dental Care*.<br><br>
-                    <a class="btn btn--block" href="mailto:admin@100smilesdentalcare.com.au?subject=Annual%20Check-Up%20Booking">
+                    <a class="btn btn--block"
+                        href="mailto:admin@100smilesdentalcare.com.au?subject=Annual%20Check-Up%20Booking">
                         Email to Book
                     </a>
                 </div>
             </aside>
-
         </section>
-
     </main>
-
 
     <footer class="site-footer" role="contentinfo">
         <div class="footer-inner">
             <div>
-  <h2>Contact</h2>
-  <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
-  <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
-  <address>Address: 33 Fantail Street, Razole, Queensland.</address>
-  <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
-</div>
+                <h2>Contact</h2>
+                <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
+                <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
+                <address>Address: 33 Fantail Street, Razole, Queensland.</address>
+                <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
+            </div>
 
             <div>
                 <h2>Trading Hours</h2>
@@ -102,6 +135,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/nav.js"></script>
+
 </body>
 
 </html>
