--- a/our-team.html
+++ b/our-team.html
@@ -4,23 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>100SMILES Dental Care — Template</title>
+    <title>100SMILES Dental Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="home">
-<header class="site-header" role="banner">
-  <h1>
-    <a href="index.html">100SMILES Dental Care</a>
-  </h1>
-</header>
+    <header class="site-header" role="banner">
+        <h1>
+            <a href="index.html">100SMILES Dental Care</a>
+        </h1>
+    </header>
 
     <nav class="site-nav" aria-label="Primary">
         <div class="nav-inner">
             <a href="services.html">Services</a>
+            <a href="free-dental-checkup.html">Free Dental Check-up</a>
             <a href="annual-check-up.html">Annual Dental Check Up</a>
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
+            <a href="online-booking.html">Online Booking</a>
+
         </div>
     </nav>
 
@@ -28,55 +34,83 @@
         <section class="team-wrap" aria-labelledby="team-title">
             <div class="team-head">
                 <h2 id="team-title">Meet the 100SMILES Team</h2>
-                <p>At 100SMILES Dental Care, our team of friendly, experienced professionals is dedicated to making
-                    every visit comfortable, reassuring, and effective. Together, we help Razole smile brighter every
-                    day.</p>
+                <p>Our experienced team brings together orthodontic, pediatric, general and preventive expertise. We
+                    share a
+                    commitment to making every visit comfortable, informative and genuinely caring for patients of all
+                    ages.</p>
             </div>
 
             <div class="grid grid--3">
-                <!-- Team Members -->
+                <!-- Johanna -->
                 <article class="member">
                     <div class="photo">
                         <img src="images/staff/staff-dr-grey.jpg" alt="Dr. Johanna Grey — Orthodontics">
                     </div>
                     <div class="info">
-                        <p class="who"><strong>Dr. Johanna Grey</strong><span class="role">Orthodontics</span></p>
+                        <p class="who"><strong>Dr. Johanna Grey (DDS)</strong><span class="role">Orthodontics</span></p>
                         <a class="mail-to"
                             href="mailto:admin@100smilesdentalcare.com.au?subject=Question%20for%20Dr%20Grey">Email</a>
                     </div>
-                    <p class="bio">Johanna provides gentle, practical orthodontic care for children, teens and adults.
-                        She explains options in plain language and designs treatment plans that fit everyday life.</p>
+                    <p class="bio">Johanna’s career has been shaped by a strong focus on orthodontic care. Drawing on
+                        training at a
+                        leading dental school and years of hands-on experience, she designs treatment plans that guide
+                        teeth and jaws
+                        into healthy alignment while fitting comfortably into everyday life.</p>
                 </article>
 
-                <!-- Member 2 -->
+                <!-- Emily – new pediatric dentist -->
+                <article class="member">
+                    <div class="photo">
+                        <img src="images/staff/staff-dr-emily-carter.jpeg" alt="Dr. Emily Carter — Pediatric Dentist">
+                    </div>
+                    <div class="info">
+                        <p class="who"><strong>Dr. Emily Carter</strong><span class="role">Pediatric Dentist</span></p>
+                        <a class="mail-to"
+                            href="mailto:admin@100smilesdentalcare.com.au?subject=Question%20for%20Dr%20Emily%20Carter">Email</a>
+                    </div>
+                    <p class="bio">Emily focuses on the smiles of our youngest patients. She combines deep knowledge of
+                        children’s
+                        dental health with a gentle, reassuring style, creating a calm space where kids can build
+                        positive experiences
+                        at the dentist from the very beginning.</p>
+                </article>
+
+                <!-- Benedict -->
                 <article class="member">
                     <div class="photo">
                         <img src="images/staff/staff-dr-sloan.jpg" alt="Dr. Benedict Sloan — Dentist">
                     </div>
                     <div class="info">
-                        <p class="who"><strong>Dr. Benedict Sloan</strong><span class="role">Dentist</span></p>
+                        <p class="who"><strong>Dr. Benedict Sloan (DMD)</strong><span class="role">Dentist</span></p>
                         <a class="mail-to"
                             href="mailto:admin@100smilesdentalcare.com.au?subject=Question%20for%20Dr%20Sloan">Email</a>
                     </div>
-                    <p class="bio">Benedict covers general dentistry—check-ups, fillings and restorative care.
-                        Patients value his calm manner and clear, step-by-step guidance during treatments.</p>
+                    <p class="bio">Ben is an experienced general dentist whose work centres on long-term dental health
+                        and
+                        wellbeing. Through many years in practice, he has helped patients manage everything from routine
+                        fillings to
+                        more complex treatments, always with clear explanations and steady, careful care.</p>
                 </article>
 
-                <!-- Member 3 -->
+                <!-- Richard -->
                 <article class="member">
                     <div class="photo">
                         <img src="images/staff/staff-richard-attam.jpg" alt="Richard Attam — Dental Hygienist">
                     </div>
                     <div class="info">
-                        <p class="who"><strong>Richard Attam</strong><span class="role">Dental Hygienist</span></p>
+                        <p class="who"><strong>Richard Attam (BDS)</strong><span class="role">Dental Hygienist</span>
+                        </p>
                         <a class="mail-to"
                             href="mailto:admin@100smilesdentalcare.com.au?subject=Question%20for%20Richard%20Attam">Email</a>
                     </div>
-                    <p class="bio">Richard focuses on preventive care—professional cleanings and everyday habits
-                        that keep gums healthy. He shares simple tips that make at-home care easier.</p>
+                    <p class="bio">Richard is our preventive-care specialist. He focuses on professional cleans, gum
+                        health and
+                        practical advice, supporting our dentists and helping you keep your teeth and gums in good
+                        condition between
+                        visits.</p>
                 </article>
 
-                <!-- Member 4 -->
+                <!-- April -->
                 <article class="member">
                     <div class="photo">
                         <img src="images/staff/staff-april-kepner.jpg"
@@ -88,33 +122,36 @@
                         <a class="mail-to"
                             href="mailto:admin@100smilesdentalcare.com.au?subject=Attention%20April%20Kepner">Email</a>
                     </div>
-                    <p class="bio">April is your first point of contact. She helps with bookings, reminders and
-                        questions about the Annual Dental Check-Up and other services.</p>
+                    <p class="bio">April is often the first voice you hear when you contact 100SMILES. She assists with
+                        appointments, enquiries and reminders, and makes sure your experience—whether in the clinic or
+                        booking from
+                        home—is smooth and welcoming.</p>
                 </article>
 
                 <aside class="fact-card" aria-label="Welcome information">
                     <div class="fact-row">
                         <div class="fact">
                             <span class="num"><strong>One Team for Your Best Smile</strong></span>
-                            <span>
-                                We believe every smile tells a story. Our caring team works together to make sure yours
-                                shines with confidence, comfort, and lasting health.</span>
-
+                            <span>Our dentists, hygienist and support staff share a single goal: to provide thoughtful,
+                                high-quality
+                                dental care so you feel listened to, supported and confident about your
+                                treatment.</span>
                         </div>
                     </div>
-                </aside>            </div>
+                </aside>
+            </div>
         </section>
     </main>
 
     <footer class="site-footer" role="contentinfo">
         <div class="footer-inner">
             <div>
-  <h2>Contact</h2>
-  <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
-  <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
-  <address>Address: 33 Fantail Street, Razole, Queensland.</address>
-  <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
-</div>
+                <h2>Contact</h2>
+                <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
+                <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
+                <address>Address: 33 Fantail Street, Razole, Queensland.</address>
+                <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
+            </div>
 
             <div>
                 <h2>Trading Hours</h2>
