--- a/services.html
+++ b/services.html
@@ -4,23 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>100SMILES Dental Care — Template</title>
+    <title>100SMILES Dental Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="home">
-<header class="site-header" role="banner">
-  <h1>
-    <a href="index.html">100SMILES Dental Care</a>
-  </h1>
-</header>
+    <header class="site-header" role="banner">
+        <h1>
+            <a href="index.html">100SMILES Dental Care</a>
+        </h1>
+    </header>
 
     <nav class="site-nav" aria-label="Primary">
         <div class="nav-inner">
             <a href="services.html">Services</a>
+            <a href="free-dental-checkup.html">Free Dental Check-up</a>
             <a href="annual-check-up.html">Annual Dental Check Up</a>
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
+            <a href="online-booking.html">Online Booking</a>
+
         </div>
     </nav>
 
@@ -29,10 +35,12 @@
             <div class="services-head grid">
                 <div>
                     <h2 id="services-title">Our Services</h2>
-                    <p>Friendly dental care for the Razole community.</p>
+                    <p>A modern dental clinic in Razole, providing preventive and restorative care with advanced
+                        technology.</p>
                 </div>
-                <a class="btn" href="mailto:admin@100smilesdentalcare.com.au?subject=Appointment%20Request">Book an
-                    Appointment</a>
+                <a class="btn" href="online-booking.html">
+                    Book an Appointment
+                </a>
             </div>
 
             <div class="services-grid">
@@ -40,7 +48,8 @@
                 <article class="service-card">
                     <div class="service-card-top">Annual Dental Check-Up</div>
                     <div class="service-card-body">
-                        <p>Physical exam, cleanings, X-rays and tailored guidance to keep your teeth healthy.</p>
+                        <p>Yearly wellness visits including examination, professional cleaning, X-rays when needed and
+                            tailored advice.</p>
                         <a class="learn" href="annual-check-up.html">Learn More</a>
                     </div>
                 </article>
@@ -49,15 +58,17 @@
                 <article class="service-card">
                     <div class="service-card-top">Orthodontics</div>
                     <div class="service-card-body">
-                        <p>Assessment and treatment plans for straightening teeth and improving bite alignment.</p>
+                        <p>Planning and treatment to straighten teeth, guide jaw growth and improve bite alignment for
+                            children and adults.</p>
                     </div>
                 </article>
 
                 <!-- Oral Hygiene / Preventive Care -->
                 <article class="service-card">
-                    <div class="service-card-top">Oral Hygiene</div>
+                    <div class="service-card-top">Oral Hygiene &amp; Preventive Care</div>
                     <div class="service-card-body">
-                        <p>Routine check-ups and professional cleanings with practical at-home care tips.</p>
+                        <p>Regular check-ups, cleans and simple day-to-day strategies to help you prevent gum disease
+                            and tooth decay.</p>
                     </div>
                 </article>
 
@@ -65,7 +76,8 @@
                 <article class="service-card">
                     <div class="service-card-top">Dental Implants</div>
                     <div class="service-card-body">
-                        <p>Implant options to replace missing teeth and restore everyday function and confidence.</p>
+                        <p>Options to replace missing teeth with stable, natural-looking implants that support eating,
+                            speaking and smiling.</p>
                     </div>
                 </article>
 
@@ -73,7 +85,8 @@
                 <article class="service-card">
                     <div class="service-card-top">Cosmetic Dentistry</div>
                     <div class="service-card-body">
-                        <p>Treatments focused on improving the look of your smile with clear, friendly advice.</p>
+                        <p>Treatments to refresh the appearance of your smile, always explained in everyday language so
+                            you can choose with confidence.</p>
                     </div>
                 </article>
 
@@ -81,9 +94,55 @@
                 <article class="service-card">
                     <div class="service-card-top">Emergency Care</div>
                     <div class="service-card-body">
-                        <p>Prompt help for urgent dental issues so you can get relief and the right next steps.</p>
+                        <p>Prompt support for sudden pain, broken teeth or other urgent issues, with clear next steps
+                            for ongoing care.</p>
                     </div>
                 </article>
+            </div>
+
+            <!-- New Technologies -->
+            <div class="band" style="margin-top:2.5rem">
+                <h3>Our New Dental Technologies</h3>
+                <p>To deliver the best possible care, 100SMILES Dental Care has recently integrated several modern
+                    technologies into our practice.</p>
+
+                <div class="grid grid--3" style="margin-top:1rem">
+                    <article class="card">
+                        <h4>Digital X-Rays</h4>
+                        <p>High-resolution digital X-rays with significantly reduced radiation, helping us diagnose
+                            issues more quickly and accurately.</p>
+                    </article>
+
+                    <article class="card">
+                        <h4>Intraoral Cameras</h4>
+                        <p>Small cameras that capture detailed images inside your mouth, so we can detect problems early
+                            and show you what we see.</p>
+                    </article>
+
+                    <article class="card">
+                        <h4>Laser Dentistry</h4>
+                        <p>Gentle laser techniques for selected treatments, supporting minimally invasive care with less
+                            discomfort and faster healing.</p>
+                    </article>
+
+                    <article class="card">
+                        <h4>CAD/CAM Restorations</h4>
+                        <p>Computer-aided design and manufacturing that allows us to create precise crowns, bridges and
+                            veneers, often in a single visit.</p>
+                    </article>
+
+                    <article class="card">
+                        <h4>3D Printing</h4>
+                        <p>3D-printed models, guides and custom appliances that improve treatment planning and the fit
+                            of your dental devices.</p>
+                    </article>
+
+                    <article class="card">
+                        <h4>Teledentistry</h4>
+                        <p>Virtual consultations for suitable concerns, letting you receive professional advice and
+                            follow-up care from home.</p>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
@@ -91,12 +150,12 @@
     <footer class="site-footer" role="contentinfo">
         <div class="footer-inner">
             <div>
-  <h2>Contact</h2>
-  <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
-  <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
-  <address>Address: 33 Fantail Street, Razole, Queensland.</address>
-  <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
-</div>
+                <h2>Contact</h2>
+                <p>Phone: <a href="tel:+61750005599">07 5000 5599</a></p>
+                <p>Fax: <a href="tel:+61745679999">07 4567 9999</a></p>
+                <address>Address: 33 Fantail Street, Razole, Queensland.</address>
+                <p>Email: <a href="mailto:admin@100smilesdentalcare.com.au">admin@100smilesdentalcare.com.au</a></p>
+            </div>
 
             <div>
                 <h2>Trading Hours</h2>
