--- a/template.html
+++ b/template.html
@@ -4,28 +4,66 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>100SMILES Dental Care — Template</title>
+    <title>100SMILES Dental Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="home">
-<header class="site-header" role="banner">
-  <h1>
-    <a href="index.html">100SMILES Dental Care</a>
-  </h1>
-</header>
+    <header class="site-header" role="banner">
+        <h1>
+            <a href="index.html">100SMILES Dental Care</a>
+        </h1>
+    </header>
 
     <nav class="site-nav" aria-label="Primary">
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+
         <div class="nav-inner">
             <a href="services.html">Services</a>
+            <a href="free-dental-checkup.html">Free Dental Check-up</a>
             <a href="annual-check-up.html">Annual Dental Check Up</a>
             <a href="our-team.html">Our Team</a>
             <a href="articles.html">Articles</a>
+            <a href="online-booking.html">Online Booking</a>
         </div>
     </nav>
 
     <main id="main">
-        <p>Content goes here…</p>
+        <section class="band">
+            <h3>About 100SMILES Dental Care</h3>
+            <p>100SMILES Dental Care is a modern clinic located at <strong>33 Fantail Street in Razole</strong>. We have
+                been
+                part of the local community for more than thirty years, and our roots here run deep. Across our team, we
+                share
+                over fifty years of experience in dental care, and we are committed to delivering the best possible
+                treatment for
+                every patient.</p>
+
+            <p style="margin-top:.65rem;">We offer a wide range of services: from routine wellness check-ups and cleans
+                to
+                implants, orthodontics, cosmetic dentistry and emergency care. Our dentists are equipped to manage
+                common dental
+                problems as well as more complex cases, providing diagnosis, treatment and surgery when needed.</p>
+
+            <p style="margin-top:.65rem;">Patient education is an important part of what we do. We help you understand
+                your
+                options and give you clear, practical information so you can make confident decisions about your dental
+                health.
+                Whether you need nutritional guidance, oral hygiene tips, root canal treatment or urgent support, our
+                goal is to
+                support both your health and your happiness.</p>
+
+            <p style="margin-top:.65rem;">With the addition of a convenient online booking option and our growing
+                team—now
+                including a dedicated pediatric dentist—100SMILES Dental Care continues to focus on accessible,
+                high-quality care
+                for every stage of life.</p>
+        </section>
     </main>
 
     <footer class="site-footer" role="contentinfo">
@@ -45,6 +83,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/nav.js"></script>
+
 </body>
 
 </html>
